--- a/config/7.7.0/common.yaml
+++ b/config/7.7.0/common.yaml
@@ -196,6 +196,68 @@ console:
                   #[[end]]
                   ## RoleMapping config END
                   # Auth config END
+                  ## Jvm config BEGIN
+                  #[[if .Console.Jvm.JavaOptsAppend]]
+                  - name: JAVA_OPTS_APPEND
+                    value: "[[.Console.Jvm.JavaOptsAppend]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.JavaMaxMemRatio]]
+                  - name: JAVA_MAX_MEM_RATIO
+                    value: "[[.Console.Jvm.JavaMaxMemRatio]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.JavaInitialMemRatio]]
+                  - name: JAVA_INITIAL_MEM_RATIO
+                    value: "[[.Console.Jvm.JavaInitialMemRatio]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.JavaMaxInitialMem]]
+                  - name: JAVA_MAX_INITIAL_MEM
+                    value: "[[.Console.Jvm.JavaMaxInitialMem]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.JavaDiagnostics]]
+                  - name: JAVA_DIAGNOSTICS
+                    value: "[[.Console.Jvm.JavaDiagnostics]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.JavaDebug]]
+                  - name: JAVA_DEBUG
+                    value: "[[.Console.Jvm.JavaDebug]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.JavaDebugPort]]
+                  - name: JAVA_DEBUG_PORT
+                    value: "[[.Console.Jvm.JavaDebugPort]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.ContainerCoreLimit]]
+                  - name: CONTAINER_CORE_LIMIT
+                    value: "[[.Console.Jvm.ContainerCoreLimit]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.ContainerMaxMemory]]
+                  - name: CONTAINER_MAX_MEMORY
+                    value: "[[.Console.Jvm.ContainerMaxMemory]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.GcMinHeapFreeRatio]]
+                  - name: GC_MIN_HEAP_FREE_RATIO
+                    value: "[[.Console.Jvm.GcMinHeapFreeRatio]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.GcMaxHeapFreeRatio]]
+                  - name: GC_MAX_HEAP_FREE_RATIO
+                    value: "[[.Console.Jvm.GcMaxHeapFreeRatio]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.GcTimeRatio]]
+                  - name: GC_TIME_RATIO
+                    value: "[[.Console.Jvm.GcTimeRatio]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.GcAdaptiveSizePolicyWeight]]
+                  - name: GC_ADAPTIVE_SIZE_POLICY_WEIGHT
+                    value: "[[.Console.Jvm.GcAdaptiveSizePolicyWeight]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.GcMaxMetaspaceSize]]
+                  - name: GC_MAX_METASPACE_SIZE
+                    value: "[[.Console.Jvm.GcMaxMetaspaceSize]]"
+                  #[[end]]
+                  #[[if .Console.Jvm.GcContainerOptions]]
+                  - name: GC_CONTAINER_OPTIONS
+                    value: "[[.Console.Jvm.GcContainerOptions]]"
+                  #[[end]]
+                  ## Jvm config END
                 volumeMounts:
                   - name: "[[.ApplicationName]]-[[.Console.Name]]-[[.Constants.KeystoreVolumeSuffix]]"
                     mountPath: "/etc/businesscentral-secret-volume"
@@ -682,6 +744,68 @@ servers:
                       #[[ end ]]
                     - name: KIE_SERVER_ROUTER_PROTOCOL
                       value: "[[.SmartRouter.Protocol]]"
+                    ## Jvm config BEGIN
+                    #[[if .Jvm.JavaOptsAppend]]
+                    - name: JAVA_OPTS_APPEND
+                      value: "[[.Jvm.JavaOptsAppend]]"
+                    #[[end]]
+                    #[[if .Jvm.JavaMaxMemRatio]]
+                    - name: JAVA_MAX_MEM_RATIO
+                      value: "[[.Jvm.JavaMaxMemRatio]]"
+                    #[[end]]
+                    #[[if .Jvm.JavaInitialMemRatio]]
+                    - name: JAVA_INITIAL_MEM_RATIO
+                      value: "[[.Jvm.JavaInitialMemRatio]]"
+                    #[[end]]
+                    #[[if .Jvm.JavaMaxInitialMem]]
+                    - name: JAVA_MAX_INITIAL_MEM
+                      value: "[[.Jvm.JavaMaxInitialMem]]"
+                    #[[end]]
+                    #[[if .Jvm.JavaDiagnostics]]
+                    - name: JAVA_DIAGNOSTICS
+                      value: "[[.Jvm.JavaDiagnostics]]"
+                    #[[end]]
+                    #[[if .Jvm.JavaDebug]]
+                    - name: JAVA_DEBUG
+                      value: "[[.Jvm.JavaDebug]]"
+                    #[[end]]
+                    #[[if .Jvm.JavaDebugPort]]
+                    - name: JAVA_DEBUG_PORT
+                      value: "[[.Jvm.JavaDebugPort]]"
+                    #[[end]]
+                    #[[if .Jvm.ContainerCoreLimit]]
+                    - name: CONTAINER_CORE_LIMIT
+                      value: "[[.Jvm.ContainerCoreLimit]]"
+                    #[[end]]
+                    #[[if .Jvm.ContainerMaxMemory]]
+                    - name: CONTAINER_MAX_MEMORY
+                      value: "[[.Jvm.ContainerMaxMemory]]"
+                    #[[end]]
+                    #[[if .Jvm.GcMinHeapFreeRatio]]
+                    - name: GC_MIN_HEAP_FREE_RATIO
+                      value: "[[.Jvm.GcMinHeapFreeRatio]]"
+                    #[[end]]
+                    #[[if .Jvm.GcMaxHeapFreeRatio]]
+                    - name: GC_MAX_HEAP_FREE_RATIO
+                      value: "[[.Jvm.GcMaxHeapFreeRatio]]"
+                    #[[end]]
+                    #[[if .Jvm.GcTimeRatio]]
+                    - name: GC_TIME_RATIO
+                      value: "[[.Jvm.GcTimeRatio]]"
+                    #[[end]]
+                    #[[if .Jvm.GcAdaptiveSizePolicyWeight]]
+                    - name: GC_ADAPTIVE_SIZE_POLICY_WEIGHT
+                      value: "[[.Jvm.GcAdaptiveSizePolicyWeight]]"
+                    #[[end]]
+                    #[[if .Jvm.GcMaxMetaspaceSize]]
+                    - name: GC_MAX_METASPACE_SIZE
+                      value: "[[.Jvm.GcMaxMetaspaceSize]]"
+                    #[[end]]
+                    #[[if .Jvm.GcContainerOptions]]
+                    - name: GC_CONTAINER_OPTIONS
+                      value: "[[.Jvm.GcContainerOptions]]"
+                    #[[end]]
+                    ## Jvm config END
                   resources:
                     limits:
                       memory: 1Gi
