--- a/deploy/catalog_resources/redhat/1.4/businessautomation-operator.1.4.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/1.4/businessautomation-operator.1.4.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.7.0
-    createdAt: "2020-02-07 10:42:24"
+    createdAt: "2020-02-08 13:56:11"
     description: Business Automation Operator for deployment and management of RHPAM/RHDM
       environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -162,6 +162,18 @@ spec:
                   value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.7.0
                 - name: PAM_SMARTROUTER_IMAGE_7.7.0
                   value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.0
+                - name: OSE_CLI_IMAGE_7.7.0
+                  value: registry.redhat.io/openshift3/ose-cli:v3.11
+                - name: MYSQL_PROXY_IMAGE_7.7.0
+                  value: registry.redhat.io/rhscl/mysql-57-rhel7:latest
+                - name: POSTGRESQL_PROXY_IMAGE_7.7.0
+                  value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+                - name: DATAGRID_IMAGE_7.7.0
+                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
+                - name: BROKER_IMAGE_7.7.0
+                  value: registry.redhat.io/amq7/amq-broker:7.5
+                - name: OAUTH_PROXY_IMAGE
+                  value: registry.redhat.io/openshift3/oauth-proxy:v3.11
                 image: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.7.0
                 imagePullPolicy: Always
                 name: business-automation-operator
@@ -238,6 +250,39 @@ spec:
   maturity: stable
   provider:
     name: Red Hat, Inc.
+  relatedImages:
+  - image: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.7.0
+    name: rhpam-rhel8-operator
+  - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.7.0
+    name: rhdm-kieserver-rhel8
+  - image: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.7.0
+    name: rhdm-controller-rhel8
+  - image: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.7.0
+    name: rhdm-decisioncentral-rhel8
+  - image: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.7.0
+    name: rhpam-kieserver-rhel8
+  - image: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.7.0
+    name: rhpam-controller-rhel8
+  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.7.0
+    name: rhpam-businesscentral-rhel8
+  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.7.0
+    name: rhpam-businesscentral-monitoring-rhel8
+  - image: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.7.0
+    name: rhpam-process-migration-rhel8
+  - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.0
+    name: rhpam-smartrouter-rhel8
+  - image: registry.redhat.io/openshift3/oauth-proxy:v3.11
+    name: oauth-proxy
+  - image: registry.redhat.io/openshift3/ose-cli:v3.11
+    name: ose-cli
+  - image: registry.redhat.io/rhscl/mysql-57-rhel7:latest
+    name: mysql-57-rhel7
+  - image: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+    name: postgresql-10-rhel7
+  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
+    name: datagrid73-openshift
+  - image: registry.redhat.io/amq7/amq-broker:7.5
+    name: amq-broker
   replaces: businessautomation-operator.1.3.0
   selector:
     matchLabels:
