--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: kieapps.app.kiegroup.org
@@ -825,9 +825,11 @@ spec:
                     enabled:
                       type: boolean
                       description: Set true to enable automatic micro version product upgrades, it is disabled by default.
+                      default: false
                     minor:
                       type: boolean
                       description: Set true to enable automatic minor product version upgrades, it is disabled by default. Requires spec.upgrades.enabled to be true.
+                      default: false
     - name: v1
       served: true
       storage: false
