--- a/deploy/catalog_resources/redhat/7.8/businessautomation-operator.7.8.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/7.8/businessautomation-operator.7.8.0.clusterserviceversion.yaml
@@ -222,7 +222,7 @@ spec:
                 - name: BROKER_IMAGE_7.7.0
                   value: registry.redhat.io/amq7/amq-broker:7.5
                 - name: OAUTH_PROXY_IMAGE
-                  value: registry.redhat.io/openshift3/oauth-proxy:v3.11
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.3
                 image: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.8.0
                 imagePullPolicy: Always
                 name: business-automation-operator
@@ -432,8 +432,8 @@ spec:
     name: rhpam-businesscentral-monitoring-rhel8
   - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.0
     name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/openshift3/oauth-proxy:v3.11
-    name: oauth-proxy
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.3
+    name: ose-oauth-proxy
   - image: registry.redhat.io/openshift3/ose-cli:v3.11
     name: ose-cli
   - image: registry.redhat.io/rhscl/mysql-57-rhel7:latest
