[RHPAM-2684] Add consoleLink
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/deploy/catalog_resources/community/1.4/kiecloud-operator.1.4.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.4/kiecloud-operator.1.4.0.clusterserviceversion.yaml
@@ -219,6 +219,15 @@ spec:
           - deployments/finalizers
           verbs:
           - update
+        - apiGroups:
+          - console.openshift.io
+          resources:
+          - consolelinks
+          verbs:
+          - get
+          - create
+          - update
+          - delete
         serviceAccountName: kie-cloud-operator
     strategy: deployment
   installModes:
