--- a/deploy/catalog_resources/redhat/1.4/businessautomation-operator.1.4.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/1.4/businessautomation-operator.1.4.0.clusterserviceversion.yaml
@@ -221,6 +221,15 @@ spec:
           - deployments/finalizers
           verbs:
           - update
+        - apiGroups:
+          - console.openshift.io
+          resources:
+          - consolelinks
+          verbs:
+          - get
+          - create
+          - update
+          - delete
         serviceAccountName: business-automation-operator
     strategy: deployment
   installModes:
