--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -37,3 +37,12 @@ rules:
   - deployments/finalizers
   verbs:
   - update
+- apiGroups:
+  - console.openshift.io
+  resources:
+  - consolelinks
+  verbs:
+  - get
+  - create
+  - update
+  - delete
