--- a/config/7.7.0/dbs/external.yaml
+++ b/config/7.7.0/dbs/external.yaml
@@ -25,6 +25,8 @@ servers:
                       value: "[[.Database.ExternalConfig.Port]]"
                     - name: RHPAM_JNDI
                       value: "java:/jboss/datasources/rhpam"
+                    - name: KIE_SERVER_PERSISTENCE_DS
+                      value: "java:/jboss/datasources/rhpam"
                     - name: RHPAM_DRIVER
                       value: "[[.Database.ExternalConfig.Driver]]"
                     - name: RHPAM_USERNAME
