--- a/deploy/catalog_resources/redhat/7.8/businessautomation-operator.7.8.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/7.8/businessautomation-operator.7.8.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.8.0
-    createdAt: "2020-03-25 15:21:10"
+    createdAt: "2020-03-25 21:54:46"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -102,6 +102,12 @@ spec:
       - description: The address for accessing Business Central, if it is deployed.
         displayName: Business/Decision Central URL
         path: consoleHost
+        x-descriptors:
+        - urn:alm:descriptor:org.w3:link
+      - description: The reference to the generated NamespacedDashboard ConsoleLink
+          to Business/Decision Central URL.
+        displayName: Business/Decision Central ConsoleLink
+        path: consoleLink
         x-descriptors:
         - urn:alm:descriptor:org.w3:link
       version: v2
