[KIECLOUD-348] make storageClassName configurable
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.8.0/common.yaml
+++ b/config/7.8.0/common.yaml
@@ -309,6 +309,9 @@ console:
     - metadata:
         name: "[[.ApplicationName]]-[[.Console.Name]]-claim"
       spec:
+        # [[ if ne .Console.StorageClassName "" ]]
+        storageClassName: "[[.Console.StorageClassName]]"
+        # [[ end ]]
         accessModes:
           - ReadWriteMany
         resources:
@@ -380,6 +383,9 @@ smartRouter:
           application: "[[.ApplicationName]]"
           service: "[[.ApplicationName]]-smartrouter"
       spec:
+        # [[ if ne .SmartRouter.StorageClassName "" ]]
+        storageClassName: "[[.SmartRouter.StorageClassName]]"
+        # [[ end ]]
         accessModes:
           - ReadWriteMany
         resources:
