--- a/config/7.8.0/dbs/postgresql.yaml
+++ b/config/7.8.0/dbs/postgresql.yaml
@@ -126,6 +126,9 @@ servers:
             application: "[[$.ApplicationName]]"
             service: "[[.KieName]]-postgresql"
         spec:
+          # [[ if ne .Database.StorageClassName "" ]]
+          storageClassName: "[[.Database.StorageClassName]]"
+          # [[ end ]]
           accessModes:
             - ReadWriteOnce
           resources:
