--- a/config/7.8.0/envs/rhpam-authoring.yaml
+++ b/config/7.8.0/envs/rhpam-authoring.yaml
@@ -13,6 +13,9 @@ console:
     - metadata:
         name: "[[.ApplicationName]]-[[.Console.Name]]-claim"
       spec:
+        # [[ if ne .Console.StorageClassName "" ]]
+        storageClassName: "[[.Console.StorageClassName]]"
+        # [[ end ]]
         accessModes:
           - ReadWriteOnce
         resources:
