--- a/deploy/examples/v2/server_mysql.yaml
+++ b/deploy/examples/v2/server_mysql.yaml
@@ -10,4 +10,8 @@ spec:
         database:
           type: mysql
           size: 30Gi
-
+      - deployments: 1
+        database:
+          type: mysql
+          size: 30Gi
+          storageClassName: gold
