--- a/deploy/examples/v2/server_postgresql.yaml
+++ b/deploy/examples/v2/server_postgresql.yaml
@@ -10,3 +10,8 @@ spec:
         database:
           type: postgresql
           size: 30Gi
+      - deployments: 1
+        database:
+          type: postgresql
+          size: 30Gi
+          storageClassName: gold
