BXMSPROD-708: add CVP checks configuration file
Signed-off-by: Alberto Morales Pérez <almorale@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -38,6 +38,7 @@ osbs:
       platforms:
         only:
           - x86_64
+  extra_dir: osbs-extra
   repository:
     name: containers/rhpam-7-operator
     branch: rhba-7-rhel-8
