--- a/deploy/catalog_resources/community/7.8/kiecloud-operator.7.8.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/7.8/kiecloud-operator.7.8.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.8.0
-    createdAt: "2020-03-25 15:21:10"
+    createdAt: "2020-04-01 17:24:33"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -192,7 +192,7 @@ spec:
                 - name: POSTGRESQL_PROXY_IMAGE_7.8.0
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
                 - name: DATAGRID_IMAGE_7.8.0
-                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
+                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.5
                 - name: BROKER_IMAGE_7.8.0
                   value: registry.redhat.io/amq7/amq-broker:7.6
                 - name: DM_KIESERVER_IMAGE_7.7.0
@@ -442,7 +442,11 @@ spec:
     name: postgresql-10-rhel7
   - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
     name: datagrid73-openshift
+  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.5
+    name: datagrid73-openshift
   - image: registry.redhat.io/amq7/amq-broker:7.5
+    name: amq-broker
+  - image: registry.redhat.io/amq7/amq-broker:7.6
     name: amq-broker
   replaces: kiecloud-operator.1.4.0
   selector:
