--- a/deploy/catalog_resources/community/7.8/kiecloud-operator.7.8.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/7.8/kiecloud-operator.7.8.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.8.0
-    createdAt: "2020-04-01 16:16:00"
+    createdAt: "2020-04-08 14:39:49"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -247,8 +247,16 @@ spec:
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
                 - name: BROKER_IMAGE_7.7.0
                   value: registry.redhat.io/amq7/amq-broker:7.5
-                - name: OAUTH_PROXY_IMAGE
-                  value: registry.redhat.io/openshift3/oauth-proxy:v3.11
+                - name: OAUTH_PROXY_IMAGE_LATEST
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
+                - name: OAUTH_PROXY_IMAGE_4.3
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:4.3
+                - name: OAUTH_PROXY_IMAGE_4.2
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:4.2
+                - name: OAUTH_PROXY_IMAGE_4.1
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:4.1
+                - name: OAUTH_PROXY_IMAGE_3
+                  value: registry.redhat.io/openshift3/oauth-proxy:latest
                 image: quay.io/kiegroup/kie-cloud-operator:7.8.0
                 imagePullPolicy: Always
                 name: kie-cloud-operator
@@ -474,7 +482,15 @@ spec:
     name: rhpam-businesscentral-monitoring-rhel8
   - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.0
     name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/openshift3/oauth-proxy:v3.11
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy:latest
+    name: ose-oauth-proxy
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy:4.3
+    name: ose-oauth-proxy
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy:4.2
+    name: ose-oauth-proxy
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy:4.1
+    name: ose-oauth-proxy
+  - image: registry.redhat.io/openshift3/oauth-proxy:latest
     name: oauth-proxy
   - image: registry.redhat.io/openshift3/ose-cli:v3.11
     name: ose-cli
